--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,11 +10,16 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
+    font-family: 'Vollkorn SC', sans-serif;
 }
 
 header {
+    height: 100vh;
     z-index: 99;
     width: 100%;
+    background-image: url('../images/headerbg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 main {
