adding main font style to body element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family: 'Vollkorn SC', sans-serif;
+    font-family: 'Cormorant Garamond', sans-serif;
 }
 
 header {
