--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ main {
     flex: 1 0 auto;
 }
 
+h1, h2 {
+    font-family: "Vollkorn SC", sans-serif;
+}
+
 a {
     color: #E9E9E9;
 
@@ -45,3 +49,57 @@ a {
 .navbar a {
     margin-right: 37px;
 }
+
+.logo {
+    text-align: center;
+    margin-top: 150px;
+
+}
+
+.logo > h1 {
+    font-weight: 400;
+    font-size: 100px;
+    line-height: 75px;
+}
+
+.logo > p {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 5px;
+    
+}
+
+#menuhead {
+    padding-top: 10px;
+    margin: auto;
+    text-align: center;
+    margin-top: 100px;
+    font-weight: 400;
+    font-size: 32px;
+    border: 2px solid #fafafa;
+    width:250.33px;
+    height: 70.83px;
+    border-radius: 60%;
+    transform: rotate(-10deg);
+    
+}
+
+#menuhead > p {
+    transform: rotate(10deg);
+    font-weight: 600;
+}
+
+
+#border {
+    border: 2px solid #6F5748;
+    width:200.33px;
+    height: 60.83px;
+    border-radius: 60%;
+}
+
+
+
+
+
+
+
