--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,28 @@ main {
     ;
 }
 
+.navigation {
+    position: absolute;
+    top: 3%;
+    left: 20%;
+    width: 70%;
+    font-size: 3em;
+}
+
+.navigation ul {
+    list-style-type: none;
+    padding: 0;
+
+}
+
+.navigation li {
+    display: inline-block;
+    margin-right: 4.5%;
+    
+}
+
+
+
 h1, h2 {
     font-family: "Vollkorn SC", sans-serif;
 }
@@ -40,21 +62,12 @@ a {
     transition: box-shadow 0.3s;
     text-decoration: none;
 }
-.navbar {
-    margin: 0 5%;
-    font-size: 2.7em;
-    font-weight: 500;
-    color: #E9E9E9;
-    padding: 2% 19%;
 
 
-}
 
-.navbar a {
-    margin-right: 50px;
-}
 
 .logo {
+    
     text-align: center;
     margin-top: 10%;
 
@@ -99,14 +112,9 @@ a {
     border-radius: 50%;
 }
 
-.active:active {
 
 
-}
 
-.botbor:hover {
-    color: #6F5748;
-}
 
 .shedule {
     text-align: center;
@@ -147,21 +155,58 @@ a {
 }
 
 .chefs {
-    width: 90%;
     margin: 0 auto;
+    width: 90%;
+    margin-top: 5em;
+    max-width: 5;
+}
+.chefdiv {
+    height: 400px;
+}
+.chefs > h1 {
+    font-weight: 300;
+    text-align: center;
+    font-size: 5em;
+
 }
 
-.chefs > h1 {
-    margin-top: 1em;
-    text-align: center;
-    font-weight: 400;
-    font-size: 5em;
-    margin-bottom: 1em;
+.chefdiv > div {
+    height: 300px;
+    max-width: 20%;
+    background-size: cover;
+}
+.chefs > #chef1 {
+    background-image: url(../images/1chef.jpg);
+
+}
+.chefs > #chef2 {
+    background-image: url(../images/2chef.jpg);
+}
+.chefs > #chef3 {
+    background-image: url(../images/3chef.jpg);
+}
+.chefs > #chef4 {
+    background-image: url(../images/4chef.jpg);
+}
+.chefs > #chef5 {
+    background-image: url(../images/lastchef.jpg);
 }
 
 
     /* Header */
     @media screen and (max-width: 768px) {
+        .navigation {
+            position: relative;
+            text-align: center;
+            top: 10%;
+            font-size: 1.1em;
+
+        }
+        .navigation li {
+            display: block;
+            margin-bottom: 20px;
+        }
+
         #menuhead {
             font-size: 2em;
             width: 7em;
@@ -173,14 +218,7 @@ a {
         }
 
 
-        .navbar {
-            font-size: 1.1em;
-            line-height: 2em;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-        }
+       
         .logo {
             margin: auto; /* Центрувати .logo */
         }
@@ -195,10 +233,7 @@ a {
             line-height: 40px;
         }
     
-        .navbar a {
-            font-size: 1.1em; /* Опціонально: встановити розмір шрифту для пунктів меню */
-            line-height: 2em; /* Опціонально: встановити висоту рядка для пунктів меню */
-        }
+        
     }
     
 
