--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,15 @@ header {
     background-position: center center;
 }
 
+header > h2 {
+    display: none;
+    position: absolute;
+    top: 25px;
+    left: 13px;
+    font-size: 1em;
+    font-weight: 600;
+}
+
 main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
@@ -50,7 +59,9 @@ main {
     margin-right: 4.5%;
     
 }
-
+.navhov:hover {
+    color: #6F5748;
+}
 
 
 h1, h2 {
@@ -64,20 +75,19 @@ a {
 }
 
 
-
-
-.logo {
-    
+.logo  {
     text-align: center;
-    margin-top: 10%;
+    width: 100%;
+    position: absolute;
+    top: 25em;
+
 
 }
 
 .logo > h1 {
     font-weight: 400;
-    font-size: 10em;
-    line-height: 128px;
-    transition: font-size 0.3s;
+    font-size: 12em;
+    line-height: 160px;
 }
 
 .logo > p {
@@ -85,15 +95,17 @@ a {
     font-size: 4em;
     line-height: 1em;
     
-}
+} 
 
 
 
 #menuhead {
+    text-align: center;
+    position: absolute;
+    top: 64vh;
+    left: 44%;
     padding-top: 10px;
     margin: auto;
-    text-align: center;
-    margin-top: 100px;
     font-weight: 400;
     font-size: 4em;
     border: 1px solid #6F5748;
@@ -192,13 +204,43 @@ a {
     background-image: url(../images/lastchef.jpg);
 }
 
+#nav-toggle,.nav-toggle-label {
+    display: none;
+}
 
     /* Header */
     @media screen and (max-width: 768px) {
+
+     
+        #nav-toggle:checked~.logo   {
+            display: none;
+
+        }
+        #nav-toggle:checked~.navigation {
+            display: block;
+        }
+        
+        #nav-toggle {
+            position: absolute;
+            top: 29px;
+            right: 27px;
+            display: none;
+        }
+        
+        .nav-toggle-label {
+            position: absolute;
+            top: 20px;
+            right:20px;
+            display: block;
+        }
+        .nav-toggle-label > i {
+            font-size: 1.5em;
+        }
         .navigation {
+            display: none;
             position: relative;
             text-align: center;
-            top: 10%;
+            top: 15%;
             font-size: 1.1em;
 
         }
@@ -208,6 +250,8 @@ a {
         }
 
         #menuhead {
+            top: 75%;
+            left: 10%;
             font-size: 2em;
             width: 7em;
             height: 2em;
@@ -221,6 +265,7 @@ a {
        
         .logo {
             margin: auto; /* Центрувати .logo */
+            top: 30%;
         }
     
         .logo > h1 {
@@ -230,7 +275,11 @@ a {
         
         .logo > p {
             font-size: 1em;
-            line-height: 40px;
+            line-height: 0;
+        }
+
+        header > h2 {
+            display: block;
         }
     
         
