--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,12 +40,50 @@ main {
     ;
 }
 
+footer {
+    height: 25vh;
+    background-color: #6F5748;
+}
+
+.fotdiv {
+    width: 38%;
+    margin: 1% auto;
+
+}
+
+.fotlogo {
+    text-align: center;
+}
+.fotlogo > h2 {
+    line-height: 1em;
+    font-weight: 400;
+    font-size: 7em;
+}
+
+.fotlogo > p {
+    font-weight: 200;
+    font-size: 4em;
+    
+}
+
+.fotnav {
+    width: 90%;
+    margin: 3em auto;
+}
+
+.fotnav li {
+    font-size: 4em;
+    font-weight: 200;
+    display: inline-block;
+    margin-right: 1em;
+}
+
 .navigation {
+    text-align: center;
     position: absolute;
+    width: 100%;
     top: 3%;
-    left: 20%;
-    width: 70%;
-    font-size: 3em;
+    font-size: 5em;
 }
 
 .navigation ul {
@@ -61,6 +99,10 @@ main {
 }
 .navhov:hover {
     color: #6F5748;
+}
+
+.navhov2:hover {
+    border-bottom: 1px solid #fafafa;
 }
 
 
@@ -79,20 +121,20 @@ a {
     text-align: center;
     width: 100%;
     position: absolute;
-    top: 25em;
+    top: 30%;
 
 
 }
 
 .logo > h1 {
     font-weight: 400;
-    font-size: 12em;
-    line-height: 160px;
+    font-size: 25em;
+    line-height: 0.8em;
 }
 
 .logo > p {
     font-weight: 400;
-    font-size: 4em;
+    font-size: 7em;
     line-height: 1em;
     
 } 
@@ -102,14 +144,13 @@ a {
 #menuhead {
     text-align: center;
     position: absolute;
-    top: 64vh;
-    left: 44%;
+    top: 69vh; /* Положення відносно верхнього краю */
+    left: 43vw; /* Положення відносно лівого краю */
     padding-top: 10px;
-    margin: auto;
     font-weight: 400;
-    font-size: 4em;
+    font-size: 6em;
     border: 1px solid #6F5748;
-    width: 6em;
+    width: 9em;
     height: 2.3em;
     border-radius: 60%;
     transform: rotate(-10deg);
@@ -132,7 +173,7 @@ a {
     text-align: center;
     margin: 2em auto;
     max-height: 250px;
-    max-width: 65%;
+    max-width: 80%;
 
 }
 
@@ -140,7 +181,7 @@ a {
     margin-top: 1em;
     text-align: center;
     font-weight: 400;
-    font-size: 5em;
+    font-size: 9em;
     margin-bottom: 1em;
 }
 
@@ -154,42 +195,49 @@ a {
 
 .menushed > div {
     flex-basis: 30%; /* Змінено на flex-basis для визначення ширини елементів */
-    margin-bottom: 1em; /* Зменшено зовнішній відступ знизу для відділення блоків */
+    margin-bottom: 2em; /* Зменшено зовнішній відступ знизу для відділення блоків */
     text-align: center; /* Вирівнюємо текст в блоках по центру */
 }
 
 .menushed > div h3 {
-    font-size: 2.7em; /* Збільшено розмір тексту заголовка h3 */
+    font-size: 6em;
+    line-height: 2em;
 }
 
 .menushed > div p {
-    font-size: 2.3em; /* Збільшено розмір тексту параграфа */
+    font-size: 6em; /* Збільшено розмір тексту параграфа */
+    font-weight: 250;
 }
 
 .chefs {
     margin: 0 auto;
     width: 90%;
-    margin-top: 5em;
-    max-width: 5;
+    margin-top: 12em;
+    border: 1 px white;
 }
 .chefdiv {
-    height: 400px;
+    width: 100%;
+    height: 1000px;
+    border: 1px solid white;
 }
 .chefs > h1 {
     font-weight: 300;
     text-align: center;
-    font-size: 5em;
+    font-size: 9em;
 
 }
-
+.chefdiv {
+    position: relative;
+}
 .chefdiv > div {
-    height: 300px;
-    max-width: 20%;
+    position: absolute;
+    height: 100%;
+    width: 33%;
     background-size: cover;
 }
 .chefs > #chef1 {
-    background-image: url(../images/1chef.jpg);
-
+    position: absolute;
+    left: 0;
 }
 .chefs > #chef2 {
     background-image: url(../images/2chef.jpg);
@@ -202,6 +250,18 @@ a {
 }
 .chefs > #chef5 {
     background-image: url(../images/lastchef.jpg);
+}
+.chefp {
+    font-weight: 300;
+    font-size: 5em;
+    margin: 4vh auto;
+    width: 45%;
+    height: 30vh;
+}
+
+#paul {
+    line-height: 2em;
+    font-size: 1.2em;
 }
 
 #nav-toggle,.nav-toggle-label {
@@ -286,12 +346,23 @@ a {
     }
     
 
+    @media screen and (max-width: 992px) { 
+        
+
+    }
 
 
-@media screen and (min-width: 1200px) {   
+
+    @media screen and (min-width: 1200px) {   
 
 
 }
+    
+
+    
+
+
+
 
 
 
