--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,10 +241,24 @@ a {
 }
 
 /*Chefs Section*/
+.chefs {
+    margin: 0 auto;
+    width: 90%;
+    height: 643px;
+}
 
+.chefs > h1 {
+    text-align: center;
+    font-size: 48px;
+    line-height: 66.86px;
+    font-weight: 400;
+    margin-bottom: 40px;
+
+}
 .chefsphotos {
     display: flex;
     justify-content: center;
+    height: 282px;
 }
 
 #chef1 {
@@ -293,7 +307,16 @@ a {
 }
 
 #chefsquoute {
+    margin: 50px auto;
+    width: 40%;
+    text-align: center;
+    font-weight: 300;
+    size: 24px;
+    line-height: 29.06px;
 
+}
+#paul {
+    line-height: 40px;
 }
     /* Header */
     @media screen and (max-width: 768px) {
@@ -327,7 +350,8 @@ a {
             position: relative;
             text-align: center;
             top: 15%;
-            font-size: 1.1em;
+            font-size: 20px;
+            font-weight: 700;
 
         }
         .navigation li {
