--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,7 +307,7 @@ a {
 }
 
 #chefsquoute {
-    margin: 50px auto;
+    margin: 30px auto;
     width: 40%;
     text-align: center;
     font-weight: 300;
@@ -317,7 +317,87 @@ a {
 }
 #paul {
     line-height: 40px;
+    size: 24px;
 }
+
+#reservation {
+    width: 60%;
+    margin: 20px auto;
+}
+
+#reservation > h1 {
+    text-align: center;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 66.86px;
+    margin-bottom: 40px;
+}
+.reservinput {
+    width: 100%;
+    display: flex;
+    gap: 12px;
+    flex-wrap: wrap;
+
+}
+
+input[type="text"] {
+    background-color: #2E2E34;
+    border: 1px solid #E9E9E9;
+    border-radius: 5px;
+    width: 49%;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 5px;
+    color: #BCBCBC;
+}
+input[type="number"] {
+    background-color: #2E2E34;
+    border: 1px solid #E9E9E9;
+    border-radius: 5px;
+    width: 49%;
+    height: 40px;
+
+}
+
+select {
+    background-color: #2E2E34;
+    border: 1px solid #E9E9E9;
+    border-radius: 5px;
+    width: 24%;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 5px;
+    color: #BCBCBC;
+}
+
+textarea {
+    width: 49%;
+    height: 120px;
+    background-color: #2E2E34;
+    border: 1px solid #E9E9E9;
+    border-radius: 5px;
+    color: #BCBCBC;
+
+}
+
+
+button {
+    width: 40%;
+    height: 60px;
+    background-color: #6F5748;
+    border-radius: 5px;
+    border: none;
+    margin: 30px 0 0 40px;
+    color: #BCBCBC;
+    font-size: 32px;
+    font-family: "Vollkorn SC", sans-serif;
+    
+}
+
+
+
     /* Header */
     @media screen and (max-width: 768px) {
 
