--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,17 @@ header {
     background-position: center center;
 }
 
-header > h2 {
+#menuheadbg {
+    height: 100vh;
+    z-index: 99;
+    width: 100%;
+    background-image: url('../images/menuheadbg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+header>h2 {
     display: none;
     position: absolute;
     top: 25px;
@@ -35,7 +45,7 @@ header > h2 {
 main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    background-color:  #2E2E34;
+    background-color: #2E2E34;
     min-height: 100vw;
 }
 
@@ -57,14 +67,15 @@ footer {
 .fotlogo {
     text-align: center;
 }
-.fotlogo > h2 {
+
+.fotlogo>h2 {
     line-height: 1em;
     font-size: 32px;
 }
 
-.fotlogo > p {
+.fotlogo>p {
     font-size: 16px;
-    
+
 }
 
 .fotnav {
@@ -98,6 +109,7 @@ footer {
     display: inline-block;
     margin-right: 0.5em;
 }
+
 .navigation {
     text-align: center;
     position: absolute;
@@ -115,8 +127,9 @@ footer {
 .navigation li {
     display: inline-block;
     margin-right: 4.5%;
-    
+
 }
+
 .navhov:hover {
     color: #6F5748;
 }
@@ -126,7 +139,8 @@ footer {
 }
 
 
-h1, h2 {
+h1,
+h2 {
     font-family: "Vollkorn SC", sans-serif;
 }
 
@@ -137,7 +151,7 @@ a {
 }
 
 
-.logo  {
+.logo {
     text-align: center;
     width: 100%;
     position: absolute;
@@ -146,18 +160,18 @@ a {
 
 }
 
-.logo > h1 {
+.logo>h1 {
     font-weight: 400;
     font-size: 128px;
     line-height: 0.8em;
 }
 
-.logo > p {
+.logo>p {
     font-weight: 400;
     font-size: 40px;
     line-height: 1em;
-    
-} 
+
+}
 
 
 .menuheadcontainer {
@@ -167,6 +181,7 @@ a {
     justify-content: center;
     align-items: center;
 }
+
 #menuhead {
     text-align: center;
     padding-top: 10px;
@@ -177,10 +192,10 @@ a {
     height: 2.3em;
     border-radius: 60%;
     transform: rotate(-10deg);
-    
+
 }
 
-#menuhead > p {
+#menuhead>p {
     line-height: 1.7em;
     transform: rotate(10deg);
     font-weight: 600;
@@ -193,14 +208,14 @@ a {
 
 
 
-.shedule {
+#shedule {
     text-align: center;
     margin: 0 auto;
     max-width: 80%;
 
 }
 
-.shedule > h1 {
+#shedule>h1 {
     margin-top: 1em;
     text-align: center;
     font-weight: 400;
@@ -210,43 +225,51 @@ a {
 
 .menushed {
     display: flex;
-    flex-wrap: wrap; /* Змінено на wrap, щоб дозволити перенесення елементів на новий рядок при необхідності */
-    justify-content: center; /* Вирівнюємо елементи по центру горизонтально */
+    flex-wrap: wrap;
+    /* Змінено на wrap, щоб дозволити перенесення елементів на новий рядок при необхідності */
+    justify-content: center;
+    /* Вирівнюємо елементи по центру горизонтально */
     align-items: center;
-    margin-top: 1em; /* Зменшено зовнішній відступ зверху */
+    margin-top: 1em;
+    /* Зменшено зовнішній відступ зверху */
 }
 
-.menushed > div {
-    flex-basis: 30%; /* Змінено на flex-basis для визначення ширини елементів */
-    margin-bottom: 2em; /* Зменшено зовнішній відступ знизу для відділення блоків */
-    text-align: center; /* Вирівнюємо текст в блоках по центру */
+.menushed>div {
+    flex-basis: 30%;
+    /* Змінено на flex-basis для визначення ширини елементів */
+    margin-bottom: 2em;
+    /* Зменшено зовнішній відступ знизу для відділення блоків */
+    text-align: center;
+    /* Вирівнюємо текст в блоках по центру */
 }
 
-.menushed > div h3 {
+.menushed>div h3 {
     font-size: 24px;
     line-height: 1.2em;
     font-weight: 700;
 }
 
-.menushed > div p {
-    font-size: 20px; /* Збільшено розмір тексту параграфа */
+.menushed>div p {
+    font-size: 20px;
+    /* Збільшено розмір тексту параграфа */
     font-weight: 300;
     line-height: 1.2em;
 }
 
 
 
-#nav-toggle,.nav-toggle-label {
+#nav-toggle,
+.nav-toggle-label {
     display: none;
 }
 
 /*Chefs Section*/
-.chefs {
+#chefs {
     margin: 0 auto;
     width: 90%;
 }
 
-.chefs > h1 {
+#chefs>h1 {
     text-align: center;
     font-size: 48px;
     line-height: 66.86px;
@@ -254,6 +277,7 @@ a {
     margin-bottom: 40px;
 
 }
+
 .chefsphotos {
     display: flex;
     justify-content: center;
@@ -315,11 +339,15 @@ a {
     line-height: 29.06px;
 
 }
+
 #paul {
     line-height: 40px;
     size: 24px;
     font-weight: 600;
 }
+
+
+/*Reservation Section */
 
 #reservation {
     width: 60%;
@@ -333,6 +361,7 @@ a {
     line-height: 66.86px;
     margin-bottom: 40px;
 }
+
 .reservinput {
     width: 100%;
     display: flex;
@@ -352,12 +381,17 @@ input[type="text"] {
     padding: 5px;
     color: #BCBCBC;
 }
+
 input[type="number"] {
     background-color: #2E2E34;
     border: 1px solid #E9E9E9;
     border-radius: 5px;
     width: 49%;
     height: 40px;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 5px;
+    color: #BCBCBC;
 
 }
 
@@ -392,92 +426,98 @@ button {
     border-radius: 5px;
     border: none;
     margin: 30px 0 0 40px;
-    color: #BCBCBC;
+    color: #F0F0F0;
+
     font-size: 32px;
     font-family: "Vollkorn SC", sans-serif;
-    
+
 }
 
 
 
-    /* Header */
-    @media screen and (max-width: 768px) {
-
-        .shedule {
-            margin-top: 20px; /* Зменшено відступ для секції shedule */
-        }
-        #nav-toggle:checked~.logo   {
-            display: none;
-
-        }
-        #nav-toggle:checked~.navigation {
-            display: block;
-        }
-        
-        #nav-toggle {
-            position: absolute;
-            top: 29px;
-            right: 27px;
-            display: none;
-        }
-        
-        .nav-toggle-label {
-            position: absolute;
-            top: 20px;
-            right:20px;
-            display: block;
-        }
-        .nav-toggle-label > i {
-            font-size: 1.5em;
-        }
-        .navigation {
-            display: none;
-            position: relative;
-            text-align: center;
-            top: 15%;
-            font-size: 20px;
-            font-weight: 700;
-
-        }
-        .navigation li {
-            display: block;
-            margin-bottom: 20px;
-        }
-
-        #menuhead {
-            font-size: 1em;
-            width: 10em;
-            height: 2.6em;
-        }
-        
-        #menuhead > p {
-            line-height: 1.1em;
-        }
+/* Header */
+@media screen and (max-width: 768px) {
 
 
-       
-        .logo {
-            margin: auto; /* Центрувати .logo */
-            top: 30%;
-        }
-    
-        .logo > h1 {
-            font-size: 48px;
-            line-height: 41.57px;
-        }
-        
-        .logo > p {
-            font-size: 20px;
-            line-height: 18.44px;
-        }
+    #nav-toggle:checked~.logo {
+        display: none;
 
-        header > h2 {
-            display: block;
-        }
-        .shedule {
-            margin-top: 50px;
-        }
-    .shedule > h1 {
+    }
+
+    #nav-toggle:checked~.navigation {
+        display: block;
+    }
+
+    #nav-toggle {
+        position: absolute;
+        top: 29px;
+        right: 27px;
+        display: none;
+    }
+
+    .nav-toggle-label {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        display: block;
+    }
+
+    .nav-toggle-label>i {
+        font-size: 1.5em;
+    }
+
+    .navigation {
+        display: none;
+        position: relative;
+        text-align: center;
+        top: 15%;
+        font-size: 20px;
+        font-weight: 700;
+
+    }
+
+    .navigation li {
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    #menuhead {
+        font-size: 1em;
+        width: 10em;
+        height: 2.6em;
+    }
+
+    #menuhead>p {
+        line-height: 1.1em;
+    }
+
+
+
+    .logo {
+        margin: auto;
+        /* Центрувати .logo */
+        top: 30%;
+    }
+
+    .logo>h1 {
+        font-size: 48px;
+        line-height: 41.57px;
+    }
+
+    .logo>p {
+        font-size: 20px;
+        line-height: 18.44px;
+    }
+
+    header>h2 {
+        display: block;
+    }
+
+    #shedule {
+        margin-top: 50px;
+    }
+
+    #shedule>h1 {
         font-size: 30px;
         font-weight: 400;
     }
@@ -485,96 +525,116 @@ button {
     .menushed {
         flex-direction: column;
     }
+
     .menushed div {
         display: block;
         width: 100%;
         font-size: 14px;
         line-height: 17px;
     }
-    .menushed div > h3 {
+
+    .menushed div>h3 {
         font-weight: 700;
     }
 
 
-    .menushed div > p {
+    .menushed div>p {
         font-weight: 300;
     }
-     footer 
-     {
+
+    footer {
         font-size: 1px;
-     }
-     .chefs {
-    margin: 0 auto;
-}
-
-.chefs > h1 {
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 34px;
-
-}
-.chefsphotos {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 282px;
-}
-#chef2 {
-    width: 34%;
-}
-#chef3 {
-    width: 34%;
-
-}
-#chef4{
-    width: 34%;
-
-}
-#chef1 {
-    display: none;
-}
-
-#chef5 {
-    display: none;
-}
-
-#chefsquoute {
-    width: 100%;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 17px;
-
-}
-#paul {
-    line-height: 40px;
-    size: 24px;
-}
-
     }
-    
 
-    @media screen and (max-width: 992px) { 
-        
+    #chefs {
+        margin: 0 auto;
+    }
+
+    #chefs>h1 {
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 34px;
 
     }
 
+    .chefsphotos {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 282px;
+    }
 
+    #chef2 {
+        width: 34%;
+    }
 
-    @media screen and (min-width: 1200px) {   
+    #chef3 {
+        width: 34%;
 
+    }
+
+    #chef4 {
+        width: 34%;
+
+    }
+
+    #chef1 {
+        display: none;
+    }
+
+    #chef5 {
+        display: none;
+    }
+
+    #chefsquoute {
+        width: 100%;
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 17px;
+
+    }
+
+    #paul {
+        line-height: 40px;
+        size: 24px;
+    }
+
+    #reservation {
+        width: 90%;
+    }
+
+    input[type="text"] {
+        font-size: 14px;
+        width: 47%;
+    }
+
+    input[type="number"] {
+        width: 47%;
+        font-size: 14px;
+    }
+    select {
+        font-size: 14px;
+        width: 47%;
+    }
+    textarea {
+        width: 47%;
+        height: 60px;
+    }
+    button {
+        width: 47%;
+        height: 40px;
+        margin: 0 auto;
+        font-size: 14px;
+    
+    }
 
 }
-    
-
-    
 
 
 
 
+@media screen and (max-width: 992px) {}
 
 
 
-
-
-
-
+@media screen and (min-width: 1200px) {}
