--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     min-height: 100vh;
     display: flex;
@@ -28,6 +32,16 @@ header {
     z-index: 99;
     width: 100%;
     background-image: url('../images/menuheadbg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+#aboutusheadbg {
+    height: 100vh;
+    z-index: 99;
+    width: 100%;
+    background-image: url('../images/aboutus.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
