--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,13 +511,6 @@ button {
     margin: 30px 0;
 }
 
-.history h1 {
-    text-align: center;
-    font-size: 48px;
-    font-weight: 400;
-
-}
-
 .histlogo {
     display: flex;
     justify-content: center;
@@ -556,6 +549,23 @@ button {
     font-size: 17px;
 }
 
+/*Location Section*/
+
+#locationh1 {
+    text-align: center;
+    font-size: 48px;
+    font-weight: 400;
+    margin: 30px 0;
+}
+#location {
+    width: 90%;
+    margin: 0 auto;
+}
+iframe {
+    width: 100%;
+    height: 400px;
+    box-shadow: 0 0 50px #d5b1a3;
+}
 /* Header */
 @media screen and (max-width: 768px) {
 
