--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,6 +497,7 @@ button {
 
 /*About Us*/ 
 
+
 #history {
     height: 60vh;
     margin: 50px auto;
@@ -521,7 +522,7 @@ button {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    box-shadow: 0 0 50px #d5b1a3;
+    box-shadow: 0 0 20px #d5b1a3;
     border-radius: 5%;
 }
 
@@ -534,7 +535,7 @@ button {
     padding: 20px;
     width: 50%;
     height: 100%;
-    box-shadow: 0 0 50px #d5b1a3;
+    box-shadow: 0 0 20px #d5b1a3;
     border-radius: 5%;
 }
 .histtext > h1 {
@@ -564,7 +565,47 @@ button {
 iframe {
     width: 100%;
     height: 400px;
-    box-shadow: 0 0 50px #d5b1a3;
+    box-shadow: 0 0 20px #d5b1a3;
+}
+
+/*Awards Section*/
+
+#awards {
+    width: 90%;
+    gap: 20px;
+    height: 300px;
+    margin: 50px auto;
+    display: flex;
+}
+
+#awardsh1 {
+    text-align: center;
+    font-size: 48px;
+    font-weight: 400;
+    margin: 30px 0;
+}
+
+.award {
+    box-shadow: 0 0 20px #d5b1a3;
+    width: 20%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.award1 {
+    background-image: url(../images/award11.jpg);
+}
+.award2 {
+    background-image: url(../images/award12.jpg);
+}
+.award3 {
+    background-image: url(../images/award13.jpg);
+}
+.award4 {
+    background-image: url(../images/award14.jpg);
+}
+.award5 {
+    background-image: url(../images/award15.jpg);
 }
 /* Header */
 @media screen and (max-width: 768px) {
