--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,14 +376,14 @@ a {
     width: 40%;
     text-align: center;
     font-weight: 300;
-    size: 24px;
+    font-size: 20px;
     line-height: 29.06px;
 
 }
 
 #paul {
     line-height: 40px;
-    size: 24px;
+    font-size: 24px;
     font-weight: 600;
 }
 
@@ -806,7 +806,7 @@ iframe {
 
     #paul {
         line-height: 40px;
-        size: 24px;
+        font-size: 24px;
     }
 
     #reservation {
@@ -855,8 +855,7 @@ iframe {
         line-height: 30px;
     }
     .fotnav {
-
-        margin-bottom: 10;
+         margin-bottom: 10px;
     }
 
 
